[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/themes/new_gui/neon.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/SaveLoader.gd" type="Script" id=2]

[node name="WindowDialog" type="Panel"]
margin_left = 2.0
margin_top = -2.0
margin_right = 472.0
margin_bottom = 331.0
rect_min_size = Vector2( 315, 280 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="."]
anchor_top = 0.108
anchor_right = 1.0
anchor_bottom = 0.833
margin_top = -0.348001
margin_bottom = 5.92699
allow_reselect = true
max_text_lines = 900
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30.0
margin_right = 1.0
margin_bottom = 36.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_bottom = -8.0
custom_constants/separation = 25
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DelSave" type="Button" parent="buttons"]
margin_left = 38.0
margin_right = 235.0
margin_bottom = 32.0
text = "KEY_TEXT_DELETE_SAVE"

[node name="RunSave" type="Button" parent="buttons"]
margin_left = 260.0
margin_right = 431.0
margin_bottom = 32.0
text = "KEY_TEXT_RUN_SAVE"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_right = 406.0
margin_bottom = 186.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Proszę potwierdzić..."
dialog_text = "KEY_TEXT_DELETE_SAVE_CONFIRM"

[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="nothing_selected" from="ItemList" to="." method="_on_ItemList_nothing_selected"]
[connection signal="pressed" from="Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="buttons/DelSave" to="." method="_on_DelSave_pressed"]
[connection signal="pressed" from="buttons/RunSave" to="." method="_on_RunSave_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
